--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         initial-scale=1.0, 
         user-scalable=no" />
     <link rel="stylesheet" href="index.css">
-  <title>Drag/Drop/Bounce</title>
+  <title>MiniSliceOfFarm Weekly Menu</title>
 </head>
 
 <body>
@@ -16,19 +16,55 @@
         <div class="scrollcontainer">
         </div>
         <button class="righty paddle" id="right-button"></button>
+        <div>Click on stickers above to add them to your pallet. You can drag stickers from the pallet to anywhere on your menu!</div>
       <div id="container">
           <div id="stickerContainer">
           </div>
         <div id="calendar">
-          <div class="weekDay Monday">
+          <div class="weeklyTheme">
+            <textarea id="weeklyThemeText"></textarea>
+          </div>
+          <div class="Monday">
+            <div class = "weekDayText">
             <div class="weekDayName">Monday</div>
             <div class="weekDayDate"></div>
-          <textarea></textarea>
+            </div>
+            <hr class="weekDay-Underline" />
+            <textarea id="mondayText"></textarea>
           </div>
-          <div class="weekDay Tuesday">
-            <div>Tuesday</div>>
-          <textarea></textarea>
+          <div class="Tuesday">
+            <div class = "weekDayText">
+            <div class="weekDayName">Tuesday</div>
+            <div class="weekDayDate"></div>
+            </div>
+            <hr class="weekDay-Underline" />
+            <textarea id="tuesdayText"></textarea>
           </div>
+          <div class="Wednesday">
+            <div class = "weekDayText">
+            <div class="weekDayName">Wednesday</div>
+            <div class="weekDayDate"></div>
+            </div>
+            <hr class="weekDay-Underline" />
+            <textarea id="wednesdayText"></textarea>
+          </div>
+          <div class="Thursday">
+            <div class = "weekDayText">
+            <div class="weekDayName">Thursday</div>
+            <div class="weekDayDate"></div>
+            </div>
+            <hr class="weekDay-Underline" />
+            <textarea id="thursdayText"></textarea>
+          </div>
+          <div class="Friday">
+            <div class = "weekDayText">
+            <div class="weekDayName">Friday</div>
+            <div class="weekDayDate"></div>
+            </div>
+            <hr class="weekDay-Underline" />
+            <textarea id="fridayText"></textarea>
+          </div>
+        </div>
         </div>
         </div>
     </div>
