--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <div id="outerContainer">
-        <button class="lefty paddle" id="left-button"></button>
+        <button class="lefty paddle" id="left-button">&lt;</button>
         <div class="scrollcontainer">
         </div>
-        <button class="righty paddle" id="right-button"></button>
+        <button class="righty paddle" id="right-button">&gt; </button>
         <div>Click on stickers above to add them to your pallet. You can drag stickers from the pallet to anywhere on your menu!</div>
       <div id="container">
           <div id="stickerContainer">
