choose an image

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
             <textarea id="fridayText"></textarea>
           </div>
         </div>
+        <div id="stickerContainerCover"></div>
         </div>
         </div>
     </div>
-    <input type='button' value='Save/Print' onclick="printDiv('container');"/>
+    <input id="file" type="file" accept="image/*">
+    <button id='saveButton' onclick="printDiv('container');">Save/Print</button>
 </body>
 <script src="index.js"></script>
 </html>
