--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
     <div id="rightColumn">
       <h2>Need Inspiration?</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/playlist?list=PLxD0h0887uflNpQwXmXjtxDLL0gKUmT-p" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- calendar_side -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7733179067979683"
+           data-ad-slot="5025016571"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
 </body>
 <script src="index.js"></script>
