--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <script data-ad-client="ca-pub-7733179067979683" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta name="viewport" 
         content="width=device-width, 
         initial-scale=1.0, 
