committing old changes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 <body>
   <div id="leftColumn">
+      <nav class="sitenavigation">
+          <ul class="list">
+          <li><a href="http://minisliceoffarm.com/" onclick="return confirm('If you leave this page your calendar will be reset')">MiniSlice Blog</a></li>
+          </ul>
+       </nav>
     <div id="outerContainer">
         <button class="lefty paddle" id="left-button">&lt;</button>
         <div class="scrollcontainer">
