--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
         </div>
         <button class="righty paddle" id="right-button">&gt; </button>
         <div>Click on stickers above to add them to your pallet or upload your own by clicking <label for='file'class="uploadLabel">here.</label><input id="file" type="file" accept="image/*" style="display:none">You can drag stickers from the pallet to anywhere on your menu!</div>
-      <div id="container">
+        <div id="themeSelection">
+          Select a color theme for your menu
+          <select id="themeSelector" class="theme-list" onchange="setTheme(document.getElementById('themeSelector').value)">
+            <option disabled selected>Select</option>
+            <option class="themeSelectorSpring" value='theme-spring'>Spring Theme</option>
+            <option class="themeSelectorFall" value='theme-fall'>Fall Theme</option>
+          </select>
+        </div>
+        <div id="container">
           <div id="stickerContainer">
           </div>
         <div id="calendar">
